[GStreamer][OWR] Video rendering fixes https://bugs.webkit.org/show_bug.cgi?id=160764

Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

The video renderer of OpenWebRTC now uses OpenGL so we have two
options to correctly handle this in WebKit:

- if USE_GSTREAMER_GL is enabled then we simply pass our GL
  appsink to the renderer and there is no need to create glupload
  and glcolorconvert element on WebKit side because those elements
  are already created on OpenWebRTC side.
- if USE_GSTREAMER_GL is disabled then we need our sink to download
  frames from the GPU so that rendering can be done with the WebKit
  video sink in main memory.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::createGLAppSink): Split out GL appsink management
to a separate method that can be used by sub-classes.
(WebCore::MediaPlayerPrivateGStreamerBase::createVideoSinkGL): Use new createGLAppSink method.
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerOwr.cpp:
(WebCore::MediaPlayerPrivateGStreamerOwr::createVideoSink): handle GStreamer-GL configurations
and pass a different element to the renderer depending on the configuration.

Tools:

* gtk/jhbuild.modules: Bump to current OpenWebRTC master.

Canonical link: https://commits.webkit.org/178916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204409 268f45cc-cd09-0410-ab3c-d52691b4dbfc