Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp
@@ -799,6 +799,22 @@ MediaPlayer::MovieLoadType MediaPlayerPrivateGStreamerBase::movieLoadType() cons
 }
 
 #if USE(GSTREAMER_GL)
+GstElement* MediaPlayerPrivateGStreamerBase::createGLAppSink()
+{
+    if (!webkitGstCheckVersion(1, 8, 0))
+        return nullptr;
+
+    GstElement* appsink = gst_element_factory_make("appsink", "webkit-gl-video-sink");
+    if (!appsink)
+        return nullptr;
+
+    g_object_set(appsink, "enable-last-sample", FALSE, "emit-signals", TRUE, "max-buffers", 1, nullptr);
+    g_signal_connect(appsink, "new-sample", G_CALLBACK(newSampleCallback), this);
+    g_signal_connect(appsink, "new-preroll", G_CALLBACK(newPrerollCallback), this);
+
+    return appsink;
+}
+
 GstElement* MediaPlayerPrivateGStreamerBase::createVideoSinkGL()
 {
     // FIXME: Currently it's not possible to get the video frames and caps using this approach until
@@ -812,8 +828,9 @@ GstElement* MediaPlayerPrivateGStreamerBase::createVideoSinkGL()
     GstElement* videoSink = gst_bin_new(nullptr);
     GstElement* upload = gst_element_factory_make("glupload", nullptr);
     GstElement* colorconvert = gst_element_factory_make("glcolorconvert", nullptr);
+    GstElement* appsink = createGLAppSink();
 
-    if (!upload || !colorconvert) {
+    if (!appsink || !upload || !colorconvert) {
         GST_WARNING("Failed to create GstGL elements");
         gst_object_unref(videoSink);
 
@@ -821,11 +838,11 @@ GstElement* MediaPlayerPrivateGStreamerBase::createVideoSinkGL()
             gst_object_unref(upload);
         if (colorconvert)
             gst_object_unref(colorconvert);
+        if (appsink)
+            gst_object_unref(appsink);
 
         return nullptr;
     }
-
-    GstElement* appsink = gst_element_factory_make("appsink", "webkit-gl-video-sink");
 
     gst_bin_add_many(GST_BIN(videoSink), upload, colorconvert, appsink, nullptr);
 
@@ -837,12 +854,7 @@ GstElement* MediaPlayerPrivateGStreamerBase::createVideoSinkGL()
     GRefPtr<GstPad> pad = adoptGRef(gst_element_get_static_pad(upload, "sink"));
     gst_element_add_pad(videoSink, gst_ghost_pad_new("sink", pad.get()));
 
-    g_object_set(appsink, "enable-last-sample", FALSE, "emit-signals", TRUE, "max-buffers", 1, nullptr);
-
-    if (result) {
-        g_signal_connect(appsink, "new-sample", G_CALLBACK(newSampleCallback), this);
-        g_signal_connect(appsink, "new-preroll", G_CALLBACK(newPrerollCallback), this);
-    } else {
+    if (!result) {
         GST_WARNING("Failed to link GstGL elements");
         gst_object_unref(videoSink);
         videoSink = nullptr;
